--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -2,3 +2,13 @@
   authorized_key:
     user: tess
     key: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIO6suEtywVycjshN9mWi0HbVaroMBkm0BEmK9GFLsUa7 ansible"
+
+- name: generate sshd_config file from template
+  tags: ssh
+  template:
+    src: "{{ ssh_template_file }}"
+    dest: /etc/ssh/sshd_config
+    owner: root
+    group: root
+    mode: 0644
+  notify: restart_sshd
